[package]
name = "picohttpparser-sys"
version = "1.0.0"
authors = ["Kevin Swiber <kswiber@gmail.com>"]
repository = "https://github.com/kevinswiber/picohttpparser-sys"
license = "MIT/Apache-2.0"
keywords = ["http", "parser", "pico"]
categories = ["network-programming", "parser-implementations", "web-programming"]
links = "picohttpparser"
build = "build.rs"

[dependencies]
libc = "*"

[build-dependencies]
cc = "1.0"

[features]
default = ["sse4"]
sse4 = []
